# datagenie

./: Jenkinsfile  README.md  deployment.yaml  pyproject.toml  requirements.txt  service.yaml
ci/: .flake8  Dockerfile  build.sh
infra/: asg_web.tf  cloudwatch.tf  data.tf  ecr.tf  ecs_config.tf  ecs_service.tf  lb_listener.tf  lb_target_group.tf  load_balancer.tf  provider.tf  route53_dns.tf  secret_manager.tf  secrets_manager_data.tf  sg_groups.tf  task_definition.tf  variables.tf
infra/tfenv/go/: backend.hcl  vars.tfvars
infra/tfenv/prod/: backend.hcl  vars.tfvars
src/zdt_datagenie/: main.py  test_main.py
src/zdt_datagenie/api/datagenie_v0/: api.py
src/zdt_datagenie/api/datagenie_v0/endpoints/: query.py
src/zdt_datagenie/core/authz/: poor_mans_auth.py
src/zdt_datagenie/core/database/: db_config.py  snowflake_connection.py
src/zdt_datagenie/core/model/: bot_installed_payload.py  bot_notification_payload.py  bot_response.py  interactive_message_action_payload.py  on_click_submit_payload.py
src/zdt_datagenie/core/sql/: risk.sql
src/zdt_datagenie/core/strategy/: base_cmd.py  base_strategy.py  context.py  help_cmd.py  risk_cmd.py
src/zdt_datagenie/core/templates/: help.jinja  risk.jinja
src/zdt_datagenie/core/utils/: logger.py
